add cwd, mkdir, rmdir, cd, symlink

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ endmacro()
 macro(add_fs_headers_and_sources HDRS_LIST_NAME SRCS_LIST_NAME)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/filesystem.h)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/file.h)
+    list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/file_path.h)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/descriptor.h)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/bitmap.h)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/internal/linked_list.h)
@@ -26,6 +27,7 @@ macro(add_fs_headers_and_sources HDRS_LIST_NAME SRCS_LIST_NAME)
     list(APPEND ${HDRS_LIST_NAME} ${PROJECT_SOURCE_DIR}/include/command_line_parser.h)
 
     list(APPEND ${SRCS_LIST_NAME} ${PROJECT_SOURCE_DIR}/src/filesystem.c)
+    list(APPEND ${SRCS_LIST_NAME} ${PROJECT_SOURCE_DIR}/src/file_path.c)
     list(APPEND ${SRCS_LIST_NAME} ${PROJECT_SOURCE_DIR}/src/array_list.c)
     list(APPEND ${SRCS_LIST_NAME} ${PROJECT_SOURCE_DIR}/src/file.c)
     list(APPEND ${SRCS_LIST_NAME} ${PROJECT_SOURCE_DIR}/src/bitmap.c)
